--- a/index.ipynb
+++ b/index.ipynb
@@ -77,7 +77,7 @@
    "source": [
     "import sqlite3\n",
     "\n",
-    "conn = sqlite3.connect\n",
+    "conn = sq\n",
     "\n",
     "c = None"
    ]
