--- a/index.ipynb
+++ b/index.ipynb
@@ -71,13 +71,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sqlite3\n",
-    "\n",
-    "conn =\n",
+    "conn = sqlite3.connect()\n",
     "\n",
     "c = None"
    ]
