Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -84,9 +84,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn = sqlite3.connect()\n",
+    "conn = sqlite3.connect('dogs.db')\n",
     "\n",
-    "c = None"
+    "c = conn.cur"
    ]
   },
   {
