--- a/index.ipynb
+++ b/index.ipynb
@@ -80,13 +80,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = sqlite3.connect('dogs.db')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn = sqlite3.connect('dogs.db')\n",
-    "\n",
-    "c = conn.cur"
+    "c = conn."
    ]
   },
   {
