--- a/index.ipynb
+++ b/index.ipynb
@@ -89,11 +89,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "c = conn."
+    "c = conn.cursor()"
    ]
   },
   {
