--- a/index.ipynb
+++ b/index.ipynb
@@ -124,7 +124,7 @@
    "source": [
     "select_all_female_dogs_name_and_breed = None\n",
     "\n",
-    "\n",
+    "c.fetchall\n",
     "# Expected Output:\n",
     "# [('Little Ann', 'coonhound'),\n",
     "#  ('Pickles', 'black lab'),\n",
