Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -122,7 +122,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "select_all_female_dogs_name_and_breed = None\n",
+    "select_all_female_dogs_name_and_breed = c.execute('''\n",
+    "    ''')\n",
     "\n",
     "c.fetchall\n",
     "# Expected Output:\n",
