Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -123,7 +123,7 @@
    "outputs": [],
    "source": [
     "select_all_female_dogs_name_and_breed = c.execute('''\n",
-    "    ''')\n",
+    "    SELECT ''')\n",
     "\n",
     "c.fetchall\n",
     "# Expected Output:\n",
