--- a/index.ipynb
+++ b/index.ipynb
@@ -123,7 +123,8 @@
    "outputs": [],
    "source": [
     "select_all_female_dogs_name_and_breed = c.execute('''\n",
-    "    SELECT ''')\n",
+    "    SELECT name, breed\n",
+    "    FROM dogs''')\n",
     "\n",
     "c.fetchall\n",
     "# Expected Output:\n",
