--- a/index.ipynb
+++ b/index.ipynb
@@ -124,7 +124,8 @@
    "source": [
     "select_all_female_dogs_name_and_breed = c.execute('''\n",
     "    SELECT name, breed\n",
-    "    FROM dogs''')\n",
+    "    FROM dogs\n",
+    "    WHERE gender ''')\n",
     "\n",
     "c.fetchall\n",
     "# Expected Output:\n",
