--- a/index.ipynb
+++ b/index.ipynb
@@ -118,14 +118,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OperationalError",
+     "evalue": "no such column: f",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-000662a53f10>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mSELECT\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbreed\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mFROM\u001b[0m \u001b[0mdogs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     WHERE gender IS f''')\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mOperationalError\u001b[0m: no such column: f"
+     ]
+    }
+   ],
    "source": [
     "select_all_female_dogs_name_and_breed = c.execute('''\n",
     "    SELECT name, breed\n",
     "    FROM dogs\n",
-    "    WHERE gender ''')\n",
+    "    WHERE gender IS f''')\n",
     "\n",
     "c.fetchall\n",
     "# Expected Output:\n",
