Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -122,7 +122,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c.execute()"
+    "c.execute('''\n",
+    "    SELECT * ''')"
    ]
   },
   {
