Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -123,7 +123,9 @@
    "outputs": [],
    "source": [
     "c.execute('''\n",
-    "    SELECT * ''')"
+    "    SELECT *\n",
+    "    FROM dogs\n",
+    "    LIMIT 1''')"
    ]
   },
   {
