Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -118,14 +118,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'Snoopy', 3, 'M', 'beagle', 'friendly', 1)]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "c.execute('''\n",
     "    SELECT *\n",
     "    FROM dogs\n",
-    "    LIMIT 1''')"
+    "    LIMIT 1''').fetchall()"
    ]
   },
   {
