Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -160,7 +160,7 @@
     "select_all_female_dogs_name_and_breed = c.execute('''\n",
     "    SELECT name, breed\n",
     "    FROM dogs\n",
-    "    WHERE gender IS F''')\n",
+    "    WHERE gender I''')\n",
     "\n",
     "c.fetchall\n",
     "# Expected Output:\n",
