Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -145,7 +145,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "S"
+    "c.execute('''\n",
+    "    SELECT *\n",
+    "    FROM dogs\n",
+    "    LIMIT 1''').fetchall()"
    ]
   },
   {
