Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -141,14 +141,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OperationalError",
+     "evalue": "no such table: sqlite3_master",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-e785530e38af>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m c.execute('''\n\u001b[1;32m      2\u001b[0m     \u001b[0mSELECT\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     FROM sqlite3_master''').fetchall()\n\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m: no such table: sqlite3_master"
+     ]
+    }
+   ],
    "source": [
     "c.execute('''\n",
     "    SELECT *\n",
-    "    FROM dogs\n",
-    "    LIMIT 1''').fetchall()"
+    "    FROM sqlite3_master''').fetchall()"
    ]
   },
   {
