Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -151,16 +151,12 @@
      "traceback": [
       "\u001b[0;31m\u001b[0m",
       "\u001b[0;31mOperationalError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-e785530e38af>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m c.execute('''\n\u001b[1;32m      2\u001b[0m     \u001b[0mSELECT\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     FROM sqlite3_master''').fetchall()\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-12-7f19e261d0b4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mSELECT\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mFROM\u001b[0m \u001b[0msqlite3_master\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     ''').fetchall()\n\u001b[0m",
       "\u001b[0;31mOperationalError\u001b[0m: no such table: sqlite3_master"
      ]
     }
    ],
-   "source": [
-    "c.execute('''\n",
-    "    SELECT *\n",
-    "    FROM sqlite3_master''').fetchall()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
