Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -179,7 +179,7 @@
     "select_all_female_dogs_name_and_breed = c.execute('''\n",
     "    SELECT name, breed\n",
     "    FROM dogs\n",
-    "    WHERE gender = F ''')\n",
+    "    WHERE ''')\n",
     "\n",
     "c.fetchall\n",
     "# Expected Output:\n",
