Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,12 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "c.execute('''\n",
+    "    SELECT columns\n",
+    "    FROM dogs\n",
+    "    LIMIT 1''').fetchall()"
+   ]
   },
   {
    "cell_type": "code",
