Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -164,26 +164,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function Cursor.fetchall>"
+       "[('Snoopy', 'beagle', 'M'),\n",
+       " ('McGruff', 'bloodhound', 'M'),\n",
+       " ('Scooby', 'great dane', 'M'),\n",
+       " ('Little Ann', 'coonhound', 'F'),\n",
+       " ('Pickles', 'black lab', 'F'),\n",
+       " ('Clifford', 'big red', 'M'),\n",
+       " ('Lassie', 'collie', 'F'),\n",
+       " ('Snowy', 'fox terrier', 'F'),\n",
+       " (None, 'golden retriever', 'M')]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "select_all_female_dogs_name_and_breed = c.execute('''\n",
-    "    SELECT name, breed\n",
+    "    SELECT name, breed, gender\n",
     "    FROM dogs''')\n",
     "\n",
-    "c.fetchall\n",
+    "c.fetchall()\n",
     "# Expected Output:\n",
     "# [('Little Ann', 'coonhound'),\n",
     "#  ('Pickles', 'black lab'),\n",
