Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -189,7 +189,8 @@
    "source": [
     "select_all_female_dogs_name_and_breed = c.execute('''\n",
     "    SELECT name, breed, gender\n",
-    "    FROM dogs''')\n",
+    "    FROM dogs\n",
+    "    WHERE gender IS ''')\n",
     "\n",
     "c.fetchall()\n",
     "# Expected Output:\n",
