--- a/index.ipynb
+++ b/index.ipynb
@@ -164,33 +164,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('Snoopy', 'beagle', 'M'),\n",
-       " ('McGruff', 'bloodhound', 'M'),\n",
-       " ('Scooby', 'great dane', 'M'),\n",
-       " ('Little Ann', 'coonhound', 'F'),\n",
-       " ('Pickles', 'black lab', 'F'),\n",
-       " ('Clifford', 'big red', 'M'),\n",
-       " ('Lassie', 'collie', 'F'),\n",
-       " ('Snowy', 'fox terrier', 'F'),\n",
-       " (None, 'golden retriever', 'M')]"
+       "[('Little Ann', 'coonhound'),\n",
+       " ('Pickles', 'black lab'),\n",
+       " ('Lassie', 'collie'),\n",
+       " ('Snowy', 'fox terrier')]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "select_all_female_dogs_name_and_breed = c.execute('''\n",
-    "    SELECT name, breed, gender\n",
+    "    SELECT name, breed\n",
     "    FROM dogs\n",
-    "    WHERE gender IS ''')\n",
+    "    WHERE gender IS 'F' ''')\n",
     "\n",
     "c.fetchall()\n",
     "# Expected Output:\n",
