Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -162,9 +162,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "select_all_dogs_names_in_alphabetical_order = None\n",
+    "select_all_dogs_names_in_alphabetical_order = c.execute('''\n",
+    "    ''')\n",
     "\n",
-    "c.fe\n",
+    "\n",
+    "c.fetchall()\n",
     "# Expected Output:\n",
     "# [(None,),\n",
     "#  ('Clifford',),\n",
