Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -163,6 +163,8 @@
    "outputs": [],
    "source": [
     "select_all_dogs_names_in_alphabetical_order = c.execute('''\n",
+    "    SELECT name\n",
+    "    FROM dogs\n",
     "    ''')\n",
     "\n",
     "\n",
