Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -158,14 +158,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(None,),\n",
+       " ('Clifford',),\n",
+       " ('Lassie',),\n",
+       " ('Little Ann',),\n",
+       " ('McGruff',),\n",
+       " ('Pickles',),\n",
+       " ('Scooby',),\n",
+       " ('Snoopy',),\n",
+       " ('Snowy',)]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "select_all_dogs_names_in_alphabetical_order = c.execute('''\n",
     "    SELECT name\n",
     "    FROM dogs\n",
-    "    ''')\n",
+    "    ORDER BY name''')\n",
     "\n",
     "\n",
     "c.fetchall()\n",
