Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -213,7 +213,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "select_nameless_dog = c.execute()\n",
+    "select_nameless_dog = c.execute('''\n",
+    "    SELECT name\n",
+    "    FROM dog''')\n",
     "\n",
     "# Expected Output:\n",
     "# [(9, None, 4, 'M', 'golden retriever', 'playful', 1)]"
