--- a/index.ipynb
+++ b/index.ipynb
@@ -209,13 +209,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "select_nameless_dog = c.execute('''\n",
     "    SELECT name\n",
-    "    FROM dog''')\n",
+    "    FROM dogs\n",
+    "    WHERE name = null''').fetch\n",
     "\n",
     "# Expected Output:\n",
     "# [(9, None, 4, 'M', 'golden retriever', 'playful', 1)]"
