Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -216,7 +216,7 @@
     "select_nameless_dog = c.execute('''\n",
     "    SELECT name\n",
     "    FROM dogs\n",
-    "    WHERE name = null''').fetchall()\n",
+    "    WHERE nfetchall()\n",
     "\n",
     "# Expected Output:\n",
     "# [(9, None, 4, 'M', 'golden retriever', 'playful', 1)]"
