Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -209,12 +209,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "select_nameless_dog = c.execute('''\n",
-    "    SELECT name\n",
+    "    SELECT *\n",
     "    FROM dogs\n",
     "    WHERE name IS NULL ''').fetchall()\n",
     "\n",
