Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -216,7 +216,8 @@
     "select_nameless_dog = c.execute('''\n",
     "    SELECT *\n",
     "    FROM dogs\n",
-    "    WHERE name IS NULL ''').fetchall()\n",
+    "    WHERE name IS NULL ''')\n",
+    "c.fe\n",
     "\n",
     "# Expected Output:\n",
     "# [(9, None, 4, 'M', 'golden retriever', 'playful', 1)]"
