Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -209,15 +209,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(9, None, 4, 'M', 'golden retriever', 'playful', 1)]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "select_nameless_dog = c.execute('''\n",
     "    SELECT *\n",
     "    FROM dogs\n",
     "    WHERE name IS NULL ''')\n",
-    "c.fe\n",
+    "c.fetchall()\n",
     "\n",
     "# Expected Output:\n",
     "# [(9, None, 4, 'M', 'golden retriever', 'playful', 1)]"
