Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -247,8 +247,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "select_hungry_dogs_name_and_breed_ordered_by_oldest_to_youngest = None\n",
+    "select_hungry_dogs_name_and_breed_ordered_by_oldest_to_youngest = c.execute()\n",
     "\n",
+    "c.fetchall()\n",
     "# Expected Output:\n",
     "# [('Snoopy', 'beagle'),\n",
     "#  ('Clifford', 'big red'),\n",
