--- a/index.ipynb
+++ b/index.ipynb
@@ -247,7 +247,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "select_hungry_dogs_name_and_breed_ordered_by_oldest_to_youngest = c.execute()\n",
+    "select_hungry_dogs_name_and_breed_ordered_by_oldest_to_youngest = c.execute('''\n",
+    "    SELECZT ''')\n",
     "\n",
     "c.fetchall()\n",
     "# Expected Output:\n",
