--- a/index.ipynb
+++ b/index.ipynb
@@ -248,7 +248,7 @@
    "outputs": [],
    "source": [
     "select_hungry_dogs_name_and_breed_ordered_by_oldest_to_youngest = c.execute('''\n",
-    "    SELECZT ''')\n",
+    "    SELECT ''')\n",
     "\n",
     "c.fetchall()\n",
     "# Expected Output:\n",
