Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -248,7 +248,10 @@
    "outputs": [],
    "source": [
     "select_hungry_dogs_name_and_breed_ordered_by_oldest_to_youngest = c.execute('''\n",
-    "    SELECT name, breed''')\n",
+    "    SELECT name, breed\n",
+    "    FROM dogs\n",
+    "    WHERE hungry = 1\n",
+    "    ''')\n",
     "\n",
     "c.fetchall()\n",
     "# Expected Output:\n",
