--- a/index.ipynb
+++ b/index.ipynb
@@ -243,15 +243,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Pickles', 'black lab'),\n",
+       " ('Lassie', 'collie'),\n",
+       " ('Scooby', 'great dane'),\n",
+       " ('Clifford', 'big red'),\n",
+       " (None, 'golden retriever'),\n",
+       " ('Snoopy', 'beagle')]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "select_hungry_dogs_name_and_breed_ordered_by_oldest_to_youngest = c.execute('''\n",
     "    SELECT name, breed\n",
     "    FROM dogs\n",
     "    WHERE hungry = 1\n",
-    "    ''')\n",
+    "    ORDER BY age DESC''')\n",
     "\n",
     "c.fetchall()\n",
     "# Expected Output:\n",
