Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -243,28 +243,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('Pickles', 'black lab'),\n",
-       " ('Lassie', 'collie'),\n",
-       " ('Scooby', 'great dane'),\n",
-       " ('Clifford', 'big red'),\n",
-       " (None, 'golden retriever'),\n",
-       " ('Snoopy', 'beagle')]"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "select_hungry_dogs_name_and_breed_ordered_by_oldest_to_youngest = c.execute('''\n",
-    "    SELECT name, breed\n",
+    "    SELECT name, breed, age\n",
     "    FROM dogs\n",
     "    WHERE hungry = 1\n",
     "    ORDER BY age DESC''')\n",
