Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -243,9 +243,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Pickles', 'black lab', 13),\n",
+       " ('Lassie', 'collie', 7),\n",
+       " ('Scooby', 'great dane', 6),\n",
+       " ('Clifford', 'big red', 4),\n",
+       " (None, 'golden retriever', 4),\n",
+       " ('Snoopy', 'beagle', 3)]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "select_hungry_dogs_name_and_breed_ordered_by_oldest_to_youngest = c.execute('''\n",
     "    SELECT name, breed, age\n",
@@ -276,7 +292,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "select_name_and_age_of_oldest_dog = None\n",
+    "select_name_and_age_of_oldest_dog = c.execute('')\n",
     "\n",
     "# Expected Output:\n",
     "# [('Pickles', 13)]"
