--- a/index.ipynb
+++ b/index.ipynb
@@ -292,7 +292,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "select_name_and_age_of_oldest_dog = c.execute('')\n",
+    "select_name_and_age_of_oldest_dog = c.execute('''\n",
+    "    SELECT name, age\n",
+    "    FROM dog''')\n",
     "\n",
     "# Expected Output:\n",
     "# [('Pickles', 13)]"
