--- a/index.ipynb
+++ b/index.ipynb
@@ -294,7 +294,8 @@
    "source": [
     "select_name_and_age_of_oldest_dog = c.execute('''\n",
     "    SELECT name, age\n",
-    "    FROM dog''')\n",
+    "    FROM dogs\n",
+    "    ''')\n",
     "\n",
     "# Expected Output:\n",
     "# [('Pickles', 13)]"
