--- a/index.ipynb
+++ b/index.ipynb
@@ -295,7 +295,8 @@
     "select_name_and_age_of_oldest_dog = c.execute('''\n",
     "    SELECT name, age\n",
     "    FROM dogs\n",
-    "    ''')\n",
+    "    ORDER BY age\n",
+    "    LIMIT ''')\n",
     "\n",
     "# Expected Output:\n",
     "# [('Pickles', 13)]"
