--- a/index.ipynb
+++ b/index.ipynb
@@ -293,10 +293,10 @@
    "outputs": [],
    "source": [
     "select_name_and_age_of_oldest_dog = c.execute('''\n",
-    "    SELECT name, age\n",
+    "    SELECT name, age, temperament\n",
     "    FROM dogs\n",
     "    ORDER BY age\n",
-    "    LIMIT ''')\n",
+    "    LIMIT 1''')\n",
     "\n",
     "# Expected Output:\n",
     "# [('Pickles', 13)]"
