--- a/index.ipynb
+++ b/index.ipynb
@@ -288,16 +288,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Pickles', 13, 'mischievous')]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "select_name_and_age_of_oldest_dog = c.execute('''\n",
     "    SELECT name, age, temperament\n",
     "    FROM dogs\n",
-    "    ORDER BY age\n",
+    "    ORDER BY age DESC\n",
     "    LIMIT 1''')\n",
-    "\n",
+    "c.fetchall()\n",
     "# Expected Output:\n",
     "# [('Pickles', 13)]"
    ]
