Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -326,7 +326,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "select_name_and_age_of_three_youngest_dogs = c.fe\n",
+    "select_name_and_age_of_three_youngest_dogs = c.execute('''\n",
+    "    SELED''')\n",
     "\n",
     "# Expected Output:\n",
     "# [('Snoopy', 3), ('Clifford', 4), (None, 4)]"
