Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -327,7 +327,10 @@
    "outputs": [],
    "source": [
     "select_name_and_age_of_three_youngest_dogs = c.execute('''\n",
-    "    SELED''')\n",
+    "    SELECT name, age\n",
+    "    FROM dogs\n",
+    "    ORDER BY age\n",
+    "    LIMI''')\n",
     "\n",
     "# Expected Output:\n",
     "# [('Snoopy', 3), ('Clifford', 4), (None, 4)]"
