Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -322,16 +322,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Snoopy', 3), ('Clifford', 4), (None, 4)]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "select_name_and_age_of_three_youngest_dogs = c.execute('''\n",
     "    SELECT name, age\n",
     "    FROM dogs\n",
     "    ORDER BY age\n",
-    "    LIMI''')\n",
-    "\n",
+    "    LIMIT 3''')\n",
+    "c.fetchall()\n",
     "# Expected Output:\n",
     "# [('Snoopy', 3), ('Clifford', 4), (None, 4)]"
    ]
