--- a/index.ipynb
+++ b/index.ipynb
@@ -356,11 +356,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "select_name_and_temperament_of_dogs_between_age_five_and_ten_ordered_by_oldest_to_youngest = None\n",
+    "select_name_and_temperament_of_dogs_between_age_five_and_ten_ordered_by_oldest_to_youngest = c.ex\n",
     "\n",
     "# Expected Output: \n",
     "# [('McGruff', 'bloodhound'),\n",
