--- a/index.ipynb
+++ b/index.ipynb
@@ -360,7 +360,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "select_name_and_temperament_of_dogs_between_age_five_and_ten_ordered_by_oldest_to_youngest = c.ex\n",
+    "select_name_and_temperament_of_dogs_between_age_five_and_ten_ordered_by_oldest_to_youngest = c.execute('''\n",
+    "    SELECT name, temperam''')\n",
     "\n",
     "# Expected Output: \n",
     "# [('McGruff', 'bloodhound'),\n",
