--- a/index.ipynb
+++ b/index.ipynb
@@ -361,7 +361,9 @@
    "outputs": [],
    "source": [
     "select_name_and_temperament_of_dogs_between_age_five_and_ten_ordered_by_oldest_to_youngest = c.execute('''\n",
-    "    SELECT name, temperam''')\n",
+    "    SELECT name, temperament\n",
+    "    FROM dogs\n",
+    "    ''')\n",
     "\n",
     "# Expected Output: \n",
     "# [('McGruff', 'bloodhound'),\n",
