Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -363,7 +363,8 @@
     "select_name_and_temperament_of_dogs_between_age_five_and_ten_ordered_by_oldest_to_youngest = c.execute('''\n",
     "    SELECT name, temperament\n",
     "    FROM dogs\n",
-    "    ''')\n",
+    "    WHERE age BETWEEN 5 and 10\n",
+    "    ORDER BY''')\n",
     "\n",
     "# Expected Output: \n",
     "# [('McGruff', 'bloodhound'),\n",
