Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -356,16 +356,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('McGruff', 'aware'),\n",
+       " ('Snowy', 'adventurous'),\n",
+       " ('Lassie', 'loving'),\n",
+       " ('Scooby', 'hungry'),\n",
+       " ('Little Ann', 'loyal')]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "select_name_and_temperament_of_dogs_between_age_five_and_ten_ordered_by_oldest_to_youngest = c.execute('''\n",
     "    SELECT name, temperament\n",
     "    FROM dogs\n",
     "    WHERE age BETWEEN 5 and 10\n",
-    "    ORDER BY''')\n",
-    "\n",
+    "    ORDER BY age DESC''')\n",
+    "c.fetchall()\n",
     "# Expected Output: \n",
     "# [('McGruff', 'bloodhound'),\n",
     "#  ('Snowy', 'fox terrier'),\n",
