Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -402,7 +402,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "select_name_and_age_of_hungry_dogs_between_age_two_and_seven_in_alphabetical_order = c.execute('')\n",
+    "select_name_and_age_of_hungry_dogs_between_age_two_and_seven_in_alphabetical_order = c.execute('''\n",
+    "    SELECT name, age\n",
+    "    FROM dogs\n",
+    "    WHER''')\n",
     "\n",
     "# Expected Output:\n",
     "# [(None, 4, 1),\n",
