--- a/index.ipynb
+++ b/index.ipynb
@@ -405,7 +405,8 @@
     "select_name_and_age_of_hungry_dogs_between_age_two_and_seven_in_alphabetical_order = c.execute('''\n",
     "    SELECT name, age\n",
     "    FROM dogs\n",
-    "    WHERE hungry = 1''')\n",
+    "    WHERE hungry = 1\n",
+    "    WHER''')\n",
     "\n",
     "# Expected Output:\n",
     "# [(None, 4, 1),\n",
