Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -406,7 +406,8 @@
     "    SELECT name, age\n",
     "    FROM dogs\n",
     "    WHERE hungry = 1\n",
-    "    WHER''')\n",
+    "    WHERE age BETWEEN 2 and 7\n",
+    "    ORDER BY ''')\n",
     "\n",
     "# Expected Output:\n",
     "# [(None, 4, 1),\n",
