--- a/index.ipynb
+++ b/index.ipynb
@@ -398,17 +398,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OperationalError",
+     "evalue": "near \"WHERE\": syntax error",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-36-c7c2fd1a8749>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mWHERE\u001b[0m \u001b[0mhungry\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mWHERE\u001b[0m \u001b[0mage\u001b[0m \u001b[0mBETWEEN\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;36m7\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     ORDER BY name''')\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# Expected Output:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mOperationalError\u001b[0m: near \"WHERE\": syntax error"
+     ]
+    }
+   ],
    "source": [
     "select_name_and_age_of_hungry_dogs_between_age_two_and_seven_in_alphabetical_order = c.execute('''\n",
     "    SELECT name, age\n",
     "    FROM dogs\n",
     "    WHERE hungry = 1\n",
     "    WHERE age BETWEEN 2 and 7\n",
-    "    ORDER BY ''')\n",
-    "\n",
+    "    ORDER BY name''')\n",
+    "c.fetchall()\n",
     "# Expected Output:\n",
     "# [(None, 4, 1),\n",
     "#  ('Clifford', 4, 1),\n",
