Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -418,7 +418,8 @@
     "    SELECT name, age\n",
     "    FROM dogs\n",
     "    WHERE hungry = 1\n",
-    "    WHERE age BETWEEN 2 and 7''')\n",
+    "    WHERE age BETWEEN 2 and 7\n",
+    "    ORDER BY name''')\n",
     "c.fetchall()\n",
     "# Expected Output:\n",
     "# [(None, 4, 1),\n",
