--- a/index.ipynb
+++ b/index.ipynb
@@ -398,23 +398,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(None, 4), ('Clifford', 4), ('Lassie', 7), ('Scooby', 6), ('Snoopy', 3)]"
+       "[(None, 4, 1),\n",
+       " ('Clifford', 4, 1),\n",
+       " ('Lassie', 7, 1),\n",
+       " ('Scooby', 6, 1),\n",
+       " ('Snoopy', 3, 1)]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "select_name_and_age_of_hungry_dogs_between_age_two_and_seven_in_alphabetical_order = c.execute('''\n",
-    "    SELECT name, age\n",
+    "    SELECT name, age, hungry\n",
     "    FROM dogs\n",
     "    WHERE hungry = 1\n",
     "    AND age BETWEEN 2 and 7\n",
